// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NewOrderPage > LTR snapshot 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      ordersTitle
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      newOrderTitle
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionCustomer
      </h2>
      <div
        class="grid gap-4 md:grid-cols-2"
      >
        <div
          class="flex flex-col gap-1.5"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="customer-select-input"
          >
            newOrderCustomerLabel
          </label>
          <select
            class="rounded-xl border border-border bg-background text-foreground px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-testid="customer-select"
            id="customer-select-input"
          >
            <option
              value=""
            >
              newOrderSelectCustomer
            </option>
            <option
              value="c1"
            >
              Kabul Pharma
            </option>
          </select>
        </div>
        <div
          class="flex flex-col gap-1.5"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="tax-rate"
          >
            newOrderTaxRateLabel
          </label>
          <input
            class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="input"
            id="tax-rate"
            max="100"
            min="0"
            placeholder="0"
            step="0.1"
            type="number"
            value="0"
          />
        </div>
        <div
          class="flex flex-col gap-1.5 md:col-span-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="order-notes"
          >
            newOrderNotesLabel
          </label>
          <textarea
            class="rounded-xl border border-border bg-background text-foreground px-3 py-2 text-sm resize-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            id="order-notes"
            placeholder="newOrderNotesPlaceholder"
            rows="2"
          />
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionLines
      </h2>
      <div
        class="relative mb-4"
      >
        <input
          aria-label="newOrderSearchCatalog"
          class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="input"
          placeholder="newOrderSearchCatalog"
          type="search"
          value=""
        />
      </div>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground [data-theme=dark_&]:bg-transparent [data-theme=dark_&]:hover:bg-input/30 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 mb-4"
        data-size="sm"
        data-slot="button"
        data-testid="add-manual-line"
        data-variant="outline"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus me-1"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        newOrderAddManualLine
      </button>
      <p
        class="py-4 text-sm text-muted-foreground text-center"
      >
        newOrderNoLines
      </p>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionTotals
      </h2>
      <div
        class="space-y-1 text-sm"
      >
        <div
          class="flex justify-between text-muted-foreground"
        >
          <span>
            newOrderSubtotal
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
        <div
          class="flex justify-between text-muted-foreground"
        >
          <span>
            newOrderTax {"rate":"0.0"}
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
        <div
          class="flex justify-between font-semibold text-foreground border-t border-border pt-1"
        >
          <span>
            newOrderTotal
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-testid="submit-order"
        data-variant="default"
        type="button"
      >
        newOrderSubmit
      </button>
    </div>
  </div>
</div>
`;

exports[`NewOrderPage > RTL snapshot 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      ordersTitle
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      newOrderTitle
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionCustomer
      </h2>
      <div
        class="grid gap-4 md:grid-cols-2"
      >
        <div
          class="flex flex-col gap-1.5"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="customer-select-input"
          >
            newOrderCustomerLabel
          </label>
          <select
            class="rounded-xl border border-border bg-background text-foreground px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-testid="customer-select"
            id="customer-select-input"
          >
            <option
              value=""
            >
              newOrderSelectCustomer
            </option>
            <option
              value="c1"
            >
              Kabul Pharma
            </option>
          </select>
        </div>
        <div
          class="flex flex-col gap-1.5"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="tax-rate"
          >
            newOrderTaxRateLabel
          </label>
          <input
            class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="input"
            id="tax-rate"
            max="100"
            min="0"
            placeholder="0"
            step="0.1"
            type="number"
            value="0"
          />
        </div>
        <div
          class="flex flex-col gap-1.5 md:col-span-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="order-notes"
          >
            newOrderNotesLabel
          </label>
          <textarea
            class="rounded-xl border border-border bg-background text-foreground px-3 py-2 text-sm resize-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            id="order-notes"
            placeholder="newOrderNotesPlaceholder"
            rows="2"
          />
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionLines
      </h2>
      <div
        class="relative mb-4"
      >
        <input
          aria-label="newOrderSearchCatalog"
          class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="input"
          placeholder="newOrderSearchCatalog"
          type="search"
          value=""
        />
      </div>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground [data-theme=dark_&]:bg-transparent [data-theme=dark_&]:hover:bg-input/30 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 mb-4"
        data-size="sm"
        data-slot="button"
        data-testid="add-manual-line"
        data-variant="outline"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus me-1"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        newOrderAddManualLine
      </button>
      <p
        class="py-4 text-sm text-muted-foreground text-center"
      >
        newOrderNoLines
      </p>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="mb-4 text-base font-semibold text-foreground"
      >
        newOrderSectionTotals
      </h2>
      <div
        class="space-y-1 text-sm"
      >
        <div
          class="flex justify-between text-muted-foreground"
        >
          <span>
            newOrderSubtotal
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
        <div
          class="flex justify-between text-muted-foreground"
        >
          <span>
            newOrderTax {"rate":"0.0"}
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
        <div
          class="flex justify-between font-semibold text-foreground border-t border-border pt-1"
        >
          <span>
            newOrderTotal
          </span>
          <span
            class="tabular-nums"
          >
            AFN 0.00
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-testid="submit-order"
        data-variant="default"
        type="button"
      >
        newOrderSubmit
      </button>
    </div>
  </div>
</div>
`;
